<resources>
    <string name="app_name">WhereAtCegFinal</string>
    <string name="title_activity_navigate">Map</string>

    <string name="name">Name</string>
    <string name="dept">Department</string>
    <string name="phone">Phone No</string>
    <string name="room">Room No</string>
    <string name="view">View All</string>
    <string name="add">Add</string>
    <string name="drop">Drop Table</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="success_message">Record inserted successfully!!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">BiCycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="roomerror">Enter Valid Room No</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="depterror">Enter Valid Dept Name</string>
    <string name="navigation">Navigation</string>
    <string name="searchOptions">Teachers</string>
</resources>
